Added colab link

--- a/Face_detection_using_cnn.ipynb
+++ b/Face_detection_using_cnn.ipynb
@@ -25,9 +25,9 @@
       },
       "source": [
         "<table align=\"center\">\n",
-        "  <td align=\"center\"><a target=\"_blank\" href=\"https://colab.research.google.com/github/divensambhwani/introtodeeplearning_labs/blob/master/lab2/face_detection_using_cnn.ipynb\">\n",
+        "  <td align=\"center\"><a target=\"_blank\" href=\"https://colab.research.google.com/github/divensambhwani/Face_Detection/blob/master/Face_detection_using_cnn.ipynb\">\n",
         "        <img src=\"http://introtodeeplearning.com/images/colab/colab.png?v2.0\"  style=\"padding-bottom:5px;\" />Run in Google Colab</a></td>\n",
-        "  <td align=\"center\"><a target=\"_blank\" href=\"https://github.com/aamini/introtodeeplearning_labs/blob/master/lab2/Part2_debiasing_solution.ipynb\">\n",
+        "  <td align=\"center\"><a target=\"_blank\" href=\"https://github.com/divensambhwani/Face_Detection/blob/master/Face_detection_using_cnn.ipynb\">\n",
         "        <img src=\"http://introtodeeplearning.com/images/colab/github.png\"  height=\"70px\" style=\"padding-bottom:5px;\"  />View Source on GitHub</a></td>\n",
         " </table>\n"
       ]
@@ -50,34 +50,13 @@
       "metadata": {
         "id": "Cu08qzTiM1Fv",
         "colab_type": "code",
-        "outputId": "6c78a5af-eedf-4e03-9cdd-fc7a0008e925",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 207
-        }
+        "colab": {}
       },
       "source": [
         "pip install regex"
       ],
       "execution_count": 0,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Collecting regex\n",
-            "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/6f/a6/99eeb5904ab763db87af4bd71d9b1dfdd9792681240657a4c0a599c10a81/regex-2019.08.19.tar.gz (654kB)\n",
-            "\u001b[K     |████████████████████████████████| 655kB 9.0MB/s \n",
-            "\u001b[?25hBuilding wheels for collected packages: regex\n",
-            "  Building wheel for regex (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "  Created wheel for regex: filename=regex-2019.8.19-cp27-cp27mu-linux_x86_64.whl size=531863 sha256=bf10eba235d8ce9c6603f7edbda8bf995b2910189d7680247a5fcf7e750f4353\n",
-            "  Stored in directory: /root/.cache/pip/wheels/90/04/07/b5010fb816721eb3d6dd64ed5cc8111ca23f97fdab8619b5be\n",
-            "Successfully built regex\n",
-            "Installing collected packages: regex\n",
-            "Successfully installed regex-2019.8.19\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -95,7 +74,7 @@
       "metadata": {
         "id": "E46sWVKK6LP9",
         "colab_type": "code",
-        "outputId": "002c6da5-bc6d-4662-b582-6850268e49a0",
+        "outputId": "7e50006e-2bd2-418e-fd50-fc242720be8e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 68
@@ -141,7 +120,7 @@
       "source": [
         "## 2.1 Datasets\n",
         "\n",
-        "We'll be using three datasets in this lab. In order to train our facial detection models, we'll need a dataset of positive examples (i.e., of faces) and a dataset of negative examples (i.e., of things that are not faces). We'll use these data to train our models to classify images as either faces or not faces. Finally, we'll need a test dataset of face images. Since we're concerned about the potential *bias* of our learned models against certain demographics, it's important that the test dataset we use has equal representation across the demographics or features of interest. In this lab, we'll consider skin tone and gender. \n",
+        "We'll be using three datasets. In order to train our facial detection models, we'll need a dataset of positive examples (i.e., of faces) and a dataset of negative examples (i.e., of things that are not faces). We'll use these data to train our models to classify images as either faces or not faces. Finally, we'll need a test dataset of face images.We'll consider skin tone and gender. \n",
         "\n",
         "1.   **Positive training data**: [CelebA Dataset](http://mmlab.ie.cuhk.edu.hk/projects/CelebA.html). A large-scale (over 200K images) of celebrity faces.   \n",
         "2.   **Negative training data**: [ImageNet](http://www.image-net.org/). Many images across many different categories. We'll take negative examples from a variety of non-human categories. \n",
@@ -155,7 +134,7 @@
       "metadata": {
         "id": "RWXaaIWy6jVw",
         "colab_type": "code",
-        "outputId": "110d2bd8-3bd5-4155-ffc0-f8ec91212f74",
+        "outputId": "9cb01cba-2b9a-4a24-8484-8d8d5f851fb9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 68
@@ -165,14 +144,14 @@
         "# Get the training data: both images from CelebA and ImageNet\n",
         "path_to_training_data = tf.keras.utils.get_file('train_face.h5', 'https://www.dropbox.com/s/l5iqduhe0gwxumq/train_face.h5?dl=1')"
       ],
-      "execution_count": 0,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Downloading data from https://www.dropbox.com/s/l5iqduhe0gwxumq/train_face.h5?dl=1\n",
-            "1263894528/1263889489 [==============================] - 162s 0us/step\n",
-            "1263902720/1263889489 [==============================] - 162s 0us/step\n"
+            "1263894528/1263889489 [==============================] - 26s 0us/step\n",
+            "1263902720/1263889489 [==============================] - 26s 0us/step\n"
           ],
           "name": "stdout"
         }
@@ -185,7 +164,7 @@
         "colab_type": "text"
       },
       "source": [
-        "This directly downloads the raw data. We've written two classes that do a bit of data pre-processing and import the results in a usable format: `TrainingDatasetLoader` for the training data and `PPBFaceEvaluator` for the test data.\n",
+        "This directly downloads the raw data. We'll call two classes that do a bit of data pre-processing and import the results in a usable format: `TrainingDatasetLoader` for the training data and `PPBFaceEvaluator` for the test data.\n",
         "\n",
         "Let's create a `TrainingDatasetLoader` and use it to take a look at the training data."
       ]
@@ -195,27 +174,14 @@
       "metadata": {
         "id": "UX-eUcEoazBm",
         "colab_type": "code",
-        "outputId": "61cef0be-2821-415c-beef-fb0a7b0b9d8c",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 51
-        }
+        "colab": {}
       },
       "source": [
         "# Instantiate a TrainingDatasetLoader using the downloaded dataset\n",
         "loader = util.TrainingDatasetLoader(path_to_training_data)"
       ],
       "execution_count": 0,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Opening /root/.keras/datasets/train_face.h5\n",
-            "Loading data into memory...\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -381,11 +347,11 @@
       "source": [
         "## 2.2 CNN for facial detection \n",
         "\n",
-        "First, we'll define and train a CNN on the facial classification task, and evaluate its accuracy on the PPB dataset. Later, we'll evaluate the performance of our debiased models against this baseline CNN. The CNN model has a relatively standard architecture consisting of a series of convolutional layers with batch normalization followed by two fully connected layers to flatten the convolution output and generate a class prediction. \n",
+        "We'll define and train a CNN on the facial classification task, and evaluate its accuracy on the PPB dataset. The CNN model has a relatively standard architecture consisting of a series of convolutional layers with batch normalization followed by two fully connected layers to flatten the convolution output and generate a class prediction. \n",
         "\n",
         "### Define and train the CNN model\n",
         "\n",
-        "Like we did in the first part of the lab, we'll define our CNN model, and then train on the CelebA and ImageNet datasets using the `tf.GradientTape` class and the `tf.GradientTape.gradient` method."
+        "We'll define our CNN model, and then train on the CelebA and ImageNet datasets using the `tf.GradientTape` class and the `tf.GradientTape.gradient` method."
       ]
     },
     {
